Created js and css directories

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="led_digit.css">
-  <link rel="stylesheet" href="numeric_keypad.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/led_digit.css">
+  <link rel="stylesheet" href="css/numeric_keypad.css">
 
-  <script src="led_digits.js"></script>
+  <script src="js/led_digits.js"></script>
 </head>
 
 <body>
